# aoc2021

./: Cargo.toml  getinput.sh  submit.sh
src/: lib.rs
src/Day1/: main.rs
src/Day10/: main.rs
src/Day11/: main.rs
src/Day12/: main.rs
src/Day13/: main.rs
src/Day14/: main.rs
src/Day15/: main.rs
src/Day16/: main.rs
src/Day17/: main.rs
src/Day18/: main.rs
src/Day19/: main.rs
src/Day2/: main.rs
src/Day20/: main.rs
src/Day21/: main.rs
src/Day22/: main.rs
src/Day23/: main.rs
src/Day24/: input.txt  main.rs
src/Day25/: main.rs
src/Day3/: main.rs
src/Day4/: main.rs
src/Day5/: main.rs
src/Day6/: main.rs
src/Day7/: main.rs
src/Day8/: main.rs
src/Day9/: main.rs
