[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.5"

[[bin]]
name = "day1"
path = "src/Day1/main.rs"

[[bin]]
name = "day2"
path = "src/Day2/main.rs"

[[bin]]
name = "day3"
path = "src/Day3/main.rs"

[[bin]]
name = "day4"
path = "src/Day4/main.rs"

[[bin]]
name = "day5"
path = "src/Day5/main.rs"

[[bin]]
name = "day6"
path = "src/Day6/main.rs"
