[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.5"

[profile.release]
overflow-checks = true

[[bin]]
name = "day1"
path = "src/Day1/main.rs"

[[bin]]
name = "day2"
path = "src/Day2/main.rs"

[[bin]]
name = "day3"
path = "src/Day3/main.rs"

[[bin]]
name = "day4"
path = "src/Day4/main.rs"

[[bin]]
name = "day5"
path = "src/Day5/main.rs"

[[bin]]
name = "day6"
path = "src/Day6/main.rs"

[[bin]]
name = "day7"
path = "src/Day7/main.rs"

[[bin]]
name = "day8"
path = "src/Day8/main.rs"

[[bin]]
name = "day9"
path = "src/Day9/main.rs"

[[bin]]
name = "day10"
path = "src/Day10/main.rs"

[[bin]]
name = "day11"
path = "src/Day11/main.rs"

[[bin]]
name = "day12"
path = "src/Day12/main.rs"

[[bin]]
name = "day13"
path = "src/Day13/main.rs"

[[bin]]
name = "day14"
path = "src/Day14/main.rs"

[[bin]]
name = "day15"
path = "src/Day15/main.rs"

[[bin]]
name = "day16"
path = "src/Day16/main.rs"

[[bin]]
name = "day17"
path = "src/Day17/main.rs"

[[bin]]
name = "day19"
path = "src/Day19/main.rs"

[[bin]]
name = "day18"
path = "src/Day18/main.rs"
